# ACLGAD_testbench_sim

./: CMakeLists.txt  MyConstructTestBenchV3.hh  MyMaterial.hh  MyPhotocathodeHit.cc  MyPhotocathodeHit.hh  MyPhotocathodeSD.cc  MyPhotocathodeSD.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  init_vis.mac  main.cc
cad_mesh/SC2PC2L10C0/: PMT.stl  PMT_Cathod.stl  PMT_Collimator.stl  PMT_Glass.stl  Source.stl  Source_Collimator.stl  Source_Gold.stl  Source_Window.stl
